2008-11-27 22:06-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Projects/Application/Resources/AppController.m: Correct 
	warning in application:openFile: in AppController.m in Application
	project module.

2008-11-27 12:01-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/GNUmakefile
	* GNUmakefile: Correction for bug #24674.

2008-11-27 01:29-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCProjectBrowser.m: Check return value of
	[NSWorkspace getInfoForFile:application:type:].  Corrects crash when
	no editor is available for a type.

2008-10-25 20:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: 0.5

2008-10-22 Riccardo Mottola <rmottola@users.sf.net>

	* English.lproj/Info.gorm: correct bugtracker URL

2008-10-22 Wolfgang Lux <wolfgang.lux@gmail.com>

	* Framework/PCProjectBuilder.m: fix memory related crash
	* Framework/PCProjectBuilder.m,
	Modules/Projects/Application/PCAppProject.m,
	Modules/Projects/Tool/PCToolProject.m: enhancements for relative install paths

2008-10-18 18:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog: Moved to here top level of project.
	* Documentation/ChangeLog: Removed from here...
	* Modules/Editors/ProjectCenter/PCEditor.m: Corrected an issue in the
	windowDidResignKey: method which was making the window the first
	responder.  This was preventing Find from working properly.

2008-02-20 Sergii Stoian <stoyan255@gmail.com>

        * Framework/PCProjectBuilder.m: 
	  (-parseErorLine:): Fixed type of saved row and column values.
	  Cleanup.
	* Framework/PCEditorManager.m: 
	  (-openEditorForFile:editable:windowed:): Fixed another NSLog 
	  parameter missing.

2008-02-19 Sergii Stoian <stoyan255@gmail.com>

        * PCMenuController.m: Start thinking about "Go to line:" popup.
        * English.lproj/ProjectCenter.gorm: Added "Edit->Find->Line Number..."
        menu item.